--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="owid">
+<meta name="author" content="OWID">
 <meta name="dcterms.date" content="2025-05-05">
 
 <title>Data Nuggets</title>
@@ -3100,7 +3100,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>owid </p>
+             <p>OWID </p>
           </div>
   </div>
     
